[package]
name = "solana_geyser_transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
solana-client = "1.18.0"
solana-sdk = "1.18.0"
yellowstone-grpc-client = "6.0.0"
tonic = { version = "0.12", features = ["tls"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
